--- a/create.html
+++ b/create.html
@@ -5,7 +5,7 @@
 <body style="background-color:powderblue;">
 <h1 style="text-align:center; font-size:250%;">Enter your details</h1>
 <h2 style="text-align:left; font-size:150%;">
-<form action="index.php">
+<form action="index.html">
   First name:<br>
   <input type="text" name="firstname">
   <br>
