create html updated

--- a/create.html
+++ b/create.html
@@ -20,7 +20,7 @@
   <input type="radio" name="gender" value="female"> Female<br>
   <input type="radio" name="gender" value="other"> Other<br>
   Aadhar Card no.:<br>
-  <input type="number" name="Aadhar" ><br>
+  <input type="number" name="Aadhar Card Number" ><br>
    <br>
    Mobile no.:<br>
   <input type="number" name="mobile_no" ><br>
