deposit html changed

--- a/deposit.html
+++ b/deposit.html
@@ -7,13 +7,13 @@
 <h2 style="text-align:left; font-size:150%;">
 <form action="index.html">
   First name:<br>
-  <input type="text" name="firstname">
+  <input type="text" name="Enter Your First Name">
   <br>
   Last name:<br>
-  <input type="text" name="lastname">
+  <input type="text" name="Enter your Last Name">
   <br>
   Amount:<br>
-  <input type="number" name="amount"><br>
+  <input type="number" name="Enter the desired Amount"><br>
   Account no.:<br>
   <input type="number" name="account_no"><br>
   Method of Payment:<br>
