--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body style="background-color:powderblue;">
 <?php
-<h1 style="text-align:center; font-size:500%;">WELCOME TO GRAMIN BANK SEVA</h1>
+<h1 style="text-align:center; font-size:500%;">WELCOME TO GRAMIN BANK SEVA OFFICIAL WEBSITE</h1>
 <img src="bank.jpg" alt="bank" style="width:2000px;height:300px;">
 <h2>
 <ul>
