--- a/transfer.html
+++ b/transfer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>WELCOME TO GRAMIN BANK SEVA</title>
+<title>WELCOME TO GRAMIN BANK SEVA OFFICIAL PAGE</title>
 </head>
 <body style="background-color:powderblue;">
 <h1 style="text-align:center; font-size:250%;">Enter your details</h1>
