--- a/deposit.html
+++ b/deposit.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
-<title>WELCOME TO GRAMIN BANK SEVA</title>
+<title>WELCOME TO GRAMIN BANK SEVA OFFICIAL PAGE</title>
 </head>
 <body style="background-color:powderblue;">
-<h1 style="text-align:center; font-size:250%;">Enter your details</h1>
+<h1 style="text-align:center; font-size:250%;">Enter your details correctly</h1>
 <h2 style="text-align:left; font-size:150%;">
 <form action="index.html">
   First name:<br>
@@ -13,7 +13,7 @@
   <input type="text" name="Enter your Last Name">
   <br>
   Amount:<br>
-  <input type="number" name="Enter the desired Amount"><br>
+  <input type="number" name="Enter the desired Amount in INR"><br>
   Account no.:<br>
   <input type="number" name="account_no"><br>
   Method of Payment:<br>
