--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>WELCOME TO GRAMIN BANK SEVA OFFICIAL WEBSITE</title>
+<title>WELCOME TO GRAMIN BANK SEVA</title>
 </head>
 <body style="background-color:powderblue;">
 <?php
