--- a/create.html
+++ b/create.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
-<title>WELCOME TO GRAMIN BANK SEVA</title>
+<title>WELCOME TO GRAMIN BANK SEVA OFFICAL WEBSITE</title>
 </head>
 <body style="background-color:powderblue;">
-<h1 style="text-align:center; font-size:250%;">Enter your details</h1>
+<h1 style="text-align:center; font-size:250%;">Enter your details correctly</h1>
 <h2 style="text-align:left; font-size:150%;">
 <form action="index.html">
   First name:<br>
